# src/intelligence/browser/news/dtos/update-source.dto.ts
@@ -1,0 +1,7 @@
+export class UpdateSourceDto {
+  name?: string;
+  url?: string;
+  country?: string;
+  language?: string;
+  category?: string;
+}
